==> Aeronavics/ValleyForge/res/arm/embedded-arm/bootloader/src/bootloader.cpp <==
#include "bootloader.hpp"
#include "stm32f4xx/stm32f4xx.h"
#include "stm32f4xx/stm32f4xx_flash.h"
#include "stm32f4xx/misc.h"
#include "CMSIS/core_cm4.h"
#define PORT_A				GPIOA_BASE
#define PORT_B				GPIOB_BASE
#define PORT_C				GPIOC_BASE
#define PORT_D				GPIOD_BASE
#define PORT_E				GPIOE_BASE
#define PORT_F				GPIOF_BASE
#define PORT_G				GPIOG_BASE
#define PORT_H				GPIOH_BASE
#define PORT_I				GPIOI_BASE
#define BLINK_PORT_NUM		PORT_D
#define BLINK_PIN_NUM		PIN_15
#define CLK_SPEED_IN_MHZ	(SystemCoreClock / 1000000)
#define FORCE_BL_PORT_NUM	PORT_A
#define FORCE_BL_PIN_NUM	PIN_0
#define LED_LOGIC			1 		// 0 if LED is on when logic level is low. 1 otherwise.
#define INPUT_LOGIC			1 		// 0 if button is on when logic level is low. 1 otherwise.
#define PORT_MULTIPLIER		1
#define BLINK_READ			((GPIO_TypeDef *)BLINK_PORT_NUM)->ODR
#define BLINK_WRITE			((GPIO_TypeDef *)BLINK_PORT_NUM)->ODR
#define BLINK_MODE			((GPIO_TypeDef *)BLINK_PORT_NUM)->MODER
#define BLINK_PULL_RES		((GPIO_TypeDef *)BLINK_PORT_NUM)->PUPDR
#define BLINK_OUT_TYPE		((GPIO_TypeDef *)BLINK_PORT_NUM)->OTYPER
#define BLINK_PIN_SPEED		((GPIO_TypeDef *)BLINK_PORT_NUM)->OSPEEDR
#define BLINK_ALT_FUNC_L	((GPIO_TypeDef *)BLINK_PORT_NUM)->AFR[0]
#define BLINK_ALT_FUNC_H	((GPIO_TypeDef *)BLINK_PORT_NUM)->AFR[1]
#define FORCE_BL_READ		((GPIO_TypeDef *)FORCE_BL_PORT_NUM)->IDR
#define FORCE_BL_MODE		((GPIO_TypeDef *)FORCE_BL_PORT_NUM)->MODER
#define FORCE_BL_PUL_RES	((GPIO_TypeDef *)FORCE_BL_PORT_NUM)->PUPDR

void boot_mark_clean(void)
{
	// Unlock the EEPROM for programming.
	FLASH_Unlock();

	// Clear the clean flag in EEPROM, thus making the memory 'dirty'.
	FLASH_ProgramHalfWord(SHUTDOWN_STATE_MEM, CLEAN_FLAG);

	// Lock the EEPROM after writing.
	FLASH_Lock();

	// All done.
	return;
}

void boot_mark_dirty(void)
{
	// Unlock the EEPROM for programming.
	FLASH_Unlock();

	// Clear the clean flag in EEPROM, thus making the memory 'dirty'.
	FLASH_ProgramHalfWord(SHUTDOWN_STATE_MEM, 0x0000);

	// Lock the EEPROM after writing.
	FLASH_Lock();

	// All done.
	return;
}

void set_bootloader_state(State new_state)
{
	state = new_state;
	switch (state)
	{
		case BOOT_IDLE:
			blink_on = IDLE_ON;
			blink_off = IDLE_OFF;
			break;
			
		case BOOT_COMMUNICATING:
			blink_on = COMMUNICATING_ON;
			blink_off = COMMUNICATING_OFF;
			break;
		
		case BOOT_ERROR:
			blink_on = ERROR_ON;
			blink_off = ERROR_OFF;
			break;
	}
}

void run_application(void)
{
	// Disable Interrupts.
	__disable_irq();

	// Set the application run marker to 'dirty', so that the application must 'clean' it when it shuts down.
	boot_mark_dirty();

	// TODO - Make sure we're all good to go.

	// Shut down whatever module we're using. This should return any affected peripherals to their initial states.
	mod.exit();

	// Stop the Systick interrupt.
	NVIC_InitTypeDef NVIC_InitStructure;
	NVIC_InitStructure.NVIC_IRQChannel = SysTick_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
	NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;
	NVIC_Init(&NVIC_InitStructure);

	// Disable the Systick timer and interrupt.
	SysTick->CTRL &= ~(SysTick_CTRL_TICKINT_Msk | SysTick_CTRL_ENABLE_Msk);

	// Reset all of the GPIO
	RCC->AHB1RSTR |= (RCC_AHB1RSTR_GPIOARST | RCC_AHB1RSTR_GPIOBRST | RCC_AHB1RSTR_GPIOCRST | RCC_AHB1RSTR_GPIODRST | RCC_AHB1RSTR_GPIOERST |
						RCC_AHB1RSTR_GPIOFRST | RCC_AHB1RSTR_GPIOGRST | RCC_AHB1RSTR_GPIOHRST | RCC_AHB1RSTR_GPIOIRST);

	// If the watchdog was enabled, it cannot be disabled without a hardware reset. The application will have to use it too.

	// Start execution of the application code.
	const uint32_t app_start_address = APP_START_ADDRESS;  // Load the #define into a variable for the extended asm command.
	asm("ldr R0, %[app_address]"::[app_address] "m" (app_start_address):);  // Load the firmware address into register 0 using an extended asm command.
	asm("ldr sp, [R0]");  // Load the stack pointer with the value stored at the firmware start address.
	asm("ldr pc, [R0, #4]");  // Load the program counter value stored in the second word from the firmware start address.
}

void write_flash_page(Firmware_page& buffer) 
{
	// Disable Interrupts
	__disable_irq();

	// Get the address in FLASH for the next byte of memory.
	uint32_t address = buffer.page;

	// Unlock the FLASH for writing.
	FLASH_Unlock();

	// Erase the FLASH page that we're about to write.
	#warning "This doesn't really work for the STM32F4xx. The flash pages are massive and not regularly sized."

	// Write the data from the page to FLASH, one byte at a time.
	for (uint16_t i = 0; i < buffer.code_length; i++)
	{
		// Write the byte to memory.
		FLASH_ProgramByte(address, buffer.data[i]);
		// Increment to the next memory location
		address++;
	}

	// Lock the flash
	FLASH_Lock();

	// Clear the buffer so that it may be used again.
	buffer.ready_to_write = false;
	buffer.page = 0;
	buffer.current_byte = 0;

	// Re-enable interrupts.
	__enable_irq();
	// Service any interrupts that occurred since interrupts were disabled.
	__ISB();

	// All Done.
	return;
}

void read_flash_page(Firmware_page& buffer) 
{
	// Disable interrupts.
	__disable_irq();

	// Read flash out byte by byte, up until the desired length.
	for (uint16_t i = 0; i < buffer.code_length; i++)
	{
		buffer.data[i] = *(uint8_t *)buffer.page;
	}

	// Re-enable interrupts.
	__enable_irq();
	// Service any interrupts that occurred since interrupts were disabled.
	__ISB();

	// All done.
	return;
}
