==> Aeronavics/ValleyForge/res/avr/bootloader/bootloader.cpp <==
#include "<<<TC_INSERTS_H_FILE_NAME_HERE>>>"
#include <avr/eeprom.h>
#include <avr/wdt.h>
#include <avr/interrupt.h>
#include <avr/pgmspace.h>
#include "avr_magic/avr_magic.hpp"
#define BLINK_PORT_NUM		<<<TC_INSERTS_BLINK_PORT_HERE>>>
#define BLINK_PIN_NUM		<<<TC_INSERTS_BLINK_PIN_HERE>>>
#define CLK_SPEED_IN_MHZ	<<<TC_INSERTS_CLK_SPEED_IN_MHZ_HERE>>>
#define FORCE_BL_PORT_NUM	<<<TC_INSERTS_FORCE_BL_PORT_HERE>>>
#define FORCE_BL_PIN_NUM	<<<TC_INSERTS_FORCE_BL_PIN_HERE>>>
#define LED_LOGIC			<<<TC_INSERTS_LED_LOGIC_HERE>>>
#define INPUT_LOGIC			<<<TC_INSERTS_INPUT_LOGIC_HERE>>>
#define PORT_MULTIPLIER		3
#define BLINK_READ			_SFR_IO8((BLINK_PORT_NUM * PORT_MULTIPLIER) + P_READ)
#define BLINK_WRITE			_SFR_IO8((BLINK_PORT_NUM * PORT_MULTIPLIER) + P_WRITE)
#define BLINK_MODE			_SFR_IO8((BLINK_PORT_NUM * PORT_MULTIPLIER) + P_MODE)
#define FORCE_BL_READ		_SFR_IO8((FORCE_BL_PORT_NUM * PORT_MULTIPLIER) + P_READ)
#define FORCE_BL_WRITE		_SFR_IO8((FORCE_BL_PORT_NUM * PORT_MULTIPLIER) + P_WRITE)
#define FORCE_BL_MODE		_SFR_IO8((FORCE_BL_PORT_NUM * PORT_MULTIPLIER) + P_MODE)
#define BLINK_PIN			( 1 << BLINK_PIN_NUM )
#define FORCE_BL_PIN		( 1 << FORCE_BL_PIN_NUM )
#define CLK_SPEED		(CLK_SPEED_IN_MHZ * 1000000)
#define TM_PRSCL		1024
#define TM_CHAN_VAL		((CLK_SPEED / TM_PRSCL) / 1000)
#define BOOT_TIMEOUT	10000	// Timeout in milliseconds.
#define IDLE_ON	            500
#define IDLE_OFF            500
#define COMMUNICATING_ON    55
#define COMMUNICATING_OFF   55

void boot_mark_clean(void)
{
	// Set the clean flag in EEPROM.
	uint16_t data = CLEAN_FLAG;
	void* address = (void*)(SHUTDOWNSTATE_MEM);
	eeprom_busy_wait();
	eeprom_write_block(&data, address, 2);
	eeprom_busy_wait();

	// All done.
	return;
}

void boot_mark_dirty(void)
{
	// Clear the clean flag in EEPROM, thus making the memory 'dirty'.
	uint16_t data = 0;
	void* address = (void*)(SHUTDOWNSTATE_MEM);
	eeprom_busy_wait();
	eeprom_write_block(&data, address, 2);
	eeprom_busy_wait();

	// All done.
	return;
}

void set_bootloader_state(State new_state)
{
	state = new_state;
	switch (state)
	{
		case IDLE:
			blink_on = IDLE_ON;
			blink_off = IDLE_OFF;
			break;

		case COMMUNICATING:
			blink_on = COMMUNICATING_ON;
			blink_off = COMMUNICATING_OFF;
			break;

		case ERROR:
			blink_on = ERROR_ON;
			blink_off = ERROR_OFF;
			break;
	}
}

void run_application(void)
{
	// Disable interrupts.
	cli();

	// Set the application run marker to 'dirty', so that the application must 'clean' it when it shuts down.
	boot_mark_dirty();

	// TODO - Make sure we're all good to go.

	// Stop the ms timer.
	TIMSK0 = 0b00000000;

	// Shut down whatever module we were using.  This should return any affected peripherals to their initial states.
	mod.exit();

	// Put interrupts back into application-land.
	MCUCR = (1 << IVCE);
	MCUCR = (0 << IVSEL);

	// Make sure the blinkenlight is disabled.
	BLINK_WRITE = (LED_LOGIC) ? (BLINK_WRITE & ~BLINK_PIN) : (BLINK_WRITE | BLINK_PIN);

	// Stop the timer and return them to original state.
#if defined (__AVR_AT90CAN128__)
	TCCR0A = 0b00000000;
	OCR0A = 0;
#else
	TCCR0A = 0b00000000;
	TCCR0B = 0b00000000;
	OCR0A = 0;
	OCR0B = 0;
#endif

	// Stop the watchdog. If the user wants it in their application they can set it up themselves.
	wdt_reset();
	wdt_disable();

	// Jump into the application.
	asm("jmp 0x0000");

	// We should never reach here.
	return;
}

void write_flash_page(Firmware_page& buffer)
{
	// Disable interrupts.
	cli();

	// TODO - Replace this with something non-target specific.

	// Limit the page number to the application (NRWW) section.
	if (buffer.page < BOOTLOADER_START_ADDRESS)
	{
		// Get a pointer to the start of the data we're going to write.
		uint8_t* data = static_cast<uint8_t*>(buffer.data);	// NOTE - Because we've now disabled interrupts, we can treat data as non-volatile.

		// Wait until the EEPROM is ready.
		eeprom_busy_wait();

		// Erase the FLASH page that we are about to write.
		boot_page_erase(buffer.page);
		boot_spm_busy_wait();

		// Set up the page of data to write, one word (two bytes) at at time.
		for (uint16_t i = 0; i < buffer.code_length; i += 2)
		{
			// Set up a little-endian word composed of the next two bytes of data to be written.
			uint16_t w = *data++;
			w += (*data++) << 8;

			// Fill the temporary EEPROM page buffer with the created word.
			boot_page_fill((buffer.page + i), w);
		}

		// Write the temporary EEPROM page buffer to the FLASH.
		boot_page_write(buffer.page);
		boot_spm_busy_wait();

		// Reenable the RWW EEPROM again.
		boot_rww_enable();

		// Clear the buffer so that it may be used again.
		buffer.ready_to_write = false;
		buffer.page = 0;
		buffer.current_byte = 0;
	}
	// Else something went terribly wrong, but we assume bootloader code always works.

	// Re-enable interrupts.
	sei();

	// All done.
	return;
}

void read_flash_page(Firmware_page& buffer)
{
	// Disable interrupts.
	cli();

	// TODO - Replace this with something non-target specific.

	// Limit the page number to the application (NRWW) section.
	if (buffer.page < BOOTLOADER_START_ADDRESS)
	{
		// Wait until the EEPROM is ready.
		eeprom_busy_wait();

		// Read flash page out byte by byte, up until the desired length.
		for (uint16_t i = 0; i < buffer.code_length; i++)
		{
			// Read a single byte from the flash.
			buffer.data[i] = READ_FLASH_BYTE(buffer.page + i);
		}

		// Clear the buffer so that it may be used again.
		buffer.ready_to_read = false;
		buffer.page = 0;
		buffer.current_byte = 0;
	}
	// Else something went terribly wrong, but we assume bootloader code always works.

	// Re-enable interrupts.
	sei();

	// All done.
	return;
}
